feat: 实现 Format 1 PoW 协议